Iteration 1.3 | CountriesList component

--- a/example.html
+++ b/example.html
@@ -32,7 +32,7 @@
         <div class="row">
           <!-- Countries List (Bootstrap column) -->
           <div class="col-5" style="max-height: 90vh; overflow: scroll">
-            <div class="list-group">
+            <div key={country.alpha3Code} className="country list-group">
               <a class="list-group-item list-group-item-action" href="/ABW">
                 <img src="https://www.countryflags.io/AW/flat/32.png" />
                 <p>Aruba</p>
